<resources>
    <string name="app_name">Best Cheif</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Order</string>
    <string name="menu_gallery">Discount</string>
    <string name="menu_slideshow">Take Place</string>

    <string name="home_second">Home Second</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">Gps Neteork not Enabled</string>
    <string name="open_location_settings">Open Location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="orders">Orders</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="add_location">add Location</string>
    <string name="ok">Ok</string>
    <string name="clint_list">Clint List</string>
    <string name="notifications">Notifications</string>
    <string name="order_list">Order List</string>
    <string name="add_prodaction">Add Prodaction</string>
    <string name="post">post</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="rating">Rating</string>
    <string name="saved">Saved</string>
    <string name="order">Order</string>
    <string name="kitchen_tools">Kitchen tools</string>
    <string name="kitchen_back">Kitchen back</string>
    <string name="time">Time</string>
    <string name="denial">Denial</string>
    <string name="profile">Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="lg">$</string>
    <string name="appointment_nbooking">Appointment \nBooking</string>
    <string name="choose_plane">Choose Plane</string>
    <string name="person">Person</string>
    <string name="couples">couples</string>
    <string name="family">Family</string>
    <string name="vip">Vip</string>
    <string name="next">Next</string>
    <string name="find_nfood_near_you">Find\nFood Near You</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="offer_food">Offer Food</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="log_in">Log in</string>
    <string name="hello">Hello</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="kitchen_n_secret">Kitchen \n secret</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
</resources>
