<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_view1"
        android:fontFamily="@font/bariol_regular"
        android:gravity="center_vertical"

        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:hint="@string/name"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="198dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_view1"
        android:fontFamily="@font/bariol_regular"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        android:inputType="phone"

        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="128dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_view1"
        android:fontFamily="@font/bariol_regular"
        android:gravity="center_vertical"

        android:hint="@string/email"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"

        android:textSize="18dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edit_view1"
        android:fontFamily="@font/bariol_regular"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="18dp"
        android:layout_marginTop="268dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/custum_button1"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <ProgressBar
        android:id="@+id/bar"
        android:visibility="invisible"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/tw" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/gm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>