<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/appointment_nbooking"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/choose_plane"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23">


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardBackgroundColor="@color/Belize">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                            android:id="@+id/line1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:src="@drawable/person" />
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/person"/>
                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/person"
                            android:textColor="#fff"
                            android:textSize="17dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    app:cardCornerRadius="15dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                            android:id="@+id/line2"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:src="@drawable/cop" />

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/couples"
                            android:textColor="@color/colorPrimary"
                            android:textSize="17dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView

                    android:id="@+id/card3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="15dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                            android:id="@+id/line3"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:src="@drawable/family" />

                        <TextView
                            android:id="@+id/text3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/family"
                            android:textColor="@color/colorPrimary"
                            android:textSize="17dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/vip"/>
                        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                            android:id="@+id/line4"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"/>

                        <TextView
                            android:id="@+id/text4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/vip"
                            android:textColor="@color/colorPrimary"
                            android:textSize="17dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/next"
                android:text="@string/next"
                android:gravity="center"
                android:textSize="18dp"
                android:background="@drawable/custom_button"
                android:textColor="#ffff"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>