<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CartFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/name_user"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@drawable/cartforcart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:src="@drawable/foodimage" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:background="@drawable/layout_bg2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:text="@string/my_cart"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/asia_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/line"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/asia_recycler">


                    <LinearLayout
                        android:background="@drawable/layout_bg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20dp" />
                        <TextView
                            android:layout_width="100dp"
                            android:gravity="end"
                            android:text="@string/lg"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/total"
                            android:text="0.00"
                            android:gravity="end"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20dp"
                            android:lines="1"
                            android:layout_marginTop="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:gravity="center"
                android:drawableStart="@drawable/ic_bx_cart_2"
                android:text="Submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>